pushing to merge with remote edits

--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -18,16 +18,16 @@ The two datasets ostensibly describe the same information, but significant diffe
 Discuss "truth" and uncertainty in species distributions.
 There is an objective "truth"; 
 -->
-Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each presents one understanding of the "truth" - one database relying primarily on expert opinion and the other on model predictions.  Uncertainties inherent in the method and intent inevitably drive differences in the range predictions made by each dataset; significant differences could ___lead to, communicate, imply___ dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  
+Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each presents one understanding of the "truth" - one database relying primarily on expert opinion and the other on model predictions.  Uncertainties inherent in the method and intent inevitably drive differences in the range predictions made by each dataset; significant differences could indicate dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  
 
-Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans [@rondinini_tradeoffs_2006; @jetz_ecological_2008].
+Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.
 
 To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of marine species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  
 
-It seems fair to assume that range predictions from each dataset would be more closely aligned for well-understood species.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and suggest methods to improve confidence in species range predictions. 
+___It seems fair to assume that/we can reasonably assume that___ range predictions from each dataset would be more closely aligned for well-understood species.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and suggest methods to improve confidence in species range predictions. 
 
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
 
-___we are not recommending one data set as better than the other!___
+While we cannot recommmend one data set as more accurate than the other, we suggest methods to improve confidence in species range predictions to better inform conservation management and policy decisions.
 
 ___acknowledge or debunk other global data sets - e.g. SAUP?___
