--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,7 +3,9 @@
 
 _About the datasets__:
 
-The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015] - essentially a refined extent of occurrence (EOO), based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of "probability of occurrence" for each species [@kaschner_mapping_2006; @ready_predicting_2010].  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].
+The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015] - essentially a refined extent of occurrence (EOO), based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of suitable habitat.  The model masks habitat to certain FAO Major Fishing Areas as a rough cut of geographic range, resulting in a "probability of occurrence" for each species.  Of the resulting maps, 1296 (5.7%) have been further refined under expert review [@kaschner_mapping_2006; @ready_predicting_2010].  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].
+
+___short paragraph about other datasets we didn't include, i.e. SAUP?___
 
 ___should this go in the discussion?___
 _The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006].  By comparing maps resulting from IUCN and AquaMaps methodologies, we can identify and possibly address mechanistic causes for each type of error._
