--- a/case_study_ohi/ohi_single_datasets.Rmd
+++ b/case_study_ohi/ohi_single_datasets.Rmd
@@ -36,45 +36,54 @@ source('~/github/IUCN-AquaMaps/data_explore/data_explore_fxns.R')
 ohi_rgn_cells <- read_csv(file.path(dir_git, 'case_study_ohi/rgn_cells.csv'), 
                           col_types = 'icdd_d')
 
-### get spp_info - git-annex original
+### get spp_info - git-annex original; modify spp info to exclude BOTW
 ohi_spp_info <- read_csv(file.path(dir_anx, 'v2016/int/spp_all_cleaned.csv')) %>%
-  filter(!is.na(cat_score))  %>% ### filter out unassessed and DD species
-  filter(!is.na(spatial_source)) ### filter out unmapped species
+  filter(!is.na(cat_score))      %>% ### filter out unassessed and DD species
+  filter(!is.na(spatial_source)) %>% ### filter out unmapped species
+  mutate(spatial_source = ifelse(!is.na(am_sid) & spatial_source == 'iucn-bli', 'am', spatial_source)) %>%
+  filter(spatial_source != 'iucn-bli')
+  
 
 ### Load species cells; filter to species IDs in assessed species list and cell IDs in OHI regions
 am_spp_cells <- read_csv(file.path(dir_anx, 'v2016/int/am_cells_spp_prob0.csv')) %>%
-  filter(am_sid %in% ohi_spp_info$am_sid) %>%
+  filter(am_sid %in% ohi_spp_info$am_sid) %>% 
   filter(loiczid %in% ohi_rgn_cells$loiczid)
+
+### bind IUCN loiczid dataframe to species risk category dataframe
+am_spp_cells <- am_spp_cells %>%
+  left_join(ohi_spp_info %>% select(am_sid, cat_score),
+            by = 'am_sid')
+
+
 
 iucn_spp_cells <- read_csv(file.path(dir_anx, 'v2016/int/iucn_cells_spp.csv'),
                            col_types = 'cddddc') %>%
   filter(presence != 5) %>%
   filter(iucn_sid %in% ohi_spp_info$iucn_sid) %>%
   filter(loiczid %in% ohi_rgn_cells$loiczid)
-
-### NOTE: by using the 2016 cell files we're also getting the BOTW species...
-### either mention in methods, or filter out!!!
-
-```
-
-``` {r calc_ohi_iucn_spp}
-
 ### bind IUCN loiczid dataframe to species risk category dataframe
 iucn_spp_cells <- iucn_spp_cells %>%
   left_join(ohi_spp_info %>% select(iucn_sid, cat_score),
             by = 'iucn_sid')
 
+
+
+```
+
+``` {r calc_ohi_iucn_spp}
+
+
 ### group by loiczid, then summarize to find means (and counts)
-iucn_cell_sums <- iucn_spp_cells %>%
+iucn_cell_sum <- iucn_spp_cells %>%
   filter(!is.na(cat_score)) %>%
   group_by(loiczid) %>%
   summarize(mean_cat = mean(cat_score),
             n_spp    = n())
 
-write_csv(iucn_cell_sums, file.path(dir_git, 'case_study_ohi/iucn_spp_cell_sums.csv'))
+write_csv(iucn_cell_sum, file.path(dir_git, 'case_study_ohi/iucn_spp_cell_sum.csv'))
 
 ### bind cells to regions dataframe and summarize
-iucn_rgn_sums <- iucn_cell_sums %>%
+iucn_rgn_sum <- iucn_cell_sum %>%
   inner_join(ohi_rgn_cells,
              by = 'loiczid') %>%
   # mutate(rgn_area = cell_area * proportionArea,
@@ -84,67 +93,19 @@ iucn_rgn_sums <- iucn_cell_sums %>%
          area_weighted_mean_cat = mean_cat * cell_area_weight) %>%
   arrange(loiczid)
 
-iucn_rgn_sums <- iucn_rgn_sums %>%
+iucn_rgn_sum <- iucn_rgn_sum %>%
   group_by(rgn_id) %>%
-  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight))
+  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight),
+            mean_n_spp = mean(n_spp))
 
-iucn_rgn_sums <- iucn_rgn_sums %>%
+iucn_rgn_sum <- iucn_rgn_sum %>%
   mutate(status = 100 * ((1 - rgn_mean_cat) - 0.25) / 0.75)
 
-write_csv(iucn_rgn_sums, file.path(dir_git, 'case_study_ohi/iucn_spp_region_sums.csv'))
+write_csv(iucn_rgn_sum, file.path(dir_git, 'case_study_ohi/iucn_spp_region_sum.csv'))
 
 ```
 
 ``` {r calc_ohi_am_spp}
-
-### bind IUCN loiczid dataframe to species risk category dataframe
-am_spp_cells <- am_spp_cells %>%
-  left_join(ohi_spp_info %>% select(am_sid, cat_score),
-            by = 'am_sid')
-
-### group by loiczid, then summarize to find means (and counts)
-am_cell_sums <- am_spp_cells %>%
-  filter(!is.na(cat_score)) %>%
-  group_by(loiczid) %>%
-  summarize(mean_cat = mean(cat_score),
-            n_spp    = n())
-
-write_csv(am_cell_sums, file.path(dir_git, 'case_study_ohi/am_spp_cell_sums.csv'))
-
-### bind cells to regions dataframe and summarize
-am_rgn_sums <- am_cell_sums %>%
-  inner_join(ohi_rgn_cells,
-             by = 'loiczid') %>%
-  # mutate(rgn_area = cell_area * proportionArea,
-  #        area_weighted_mean_cat   = weighted_mean_cat   * rgn_area,
-  #        area_weighted_mean_trend = weighted_mean_trend * rgn_area) %>%
-  mutate(cell_area_weight = cell_area * n_spp * proportionArea,
-         area_weighted_mean_cat = mean_cat   * cell_area_weight) %>%
-  arrange(loiczid)
-
-am_rgn_sums <- am_rgn_sums %>%
-  group_by(rgn_id) %>%
-  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight))
-
-am_rgn_sums <- am_rgn_sums %>%
-  mutate(status = 100 * ((1 - rgn_mean_cat) - 0.25) / 0.75)
-
-write_csv(am_rgn_sums, file.path(dir_git, 'case_study_ohi/am_spp_region_sums.csv'))
-
-```
-
-``` {r calc_ohi_both_spp}
-
-### DO THIS TO SANITY CHECK/SIMPLIFY IN SAME MANNER AS OTHERS???  REMOVE BOTW SPECIES???
-
-### bind IUCN loiczid dataframe to species risk category dataframe
-### Already done in above code chunk!
-# am_spp_cells <- am_spp_cells %>%
-#   left_join(ohi_spp_info %>% select(am_sid, cat_score = category_score),
-#             by = 'am_sid')
-
-ohi_am_maps <- ohi_spp_info %>%
-  filter(str_detect(spatial_source, 'am'))
 
 ### group by loiczid, then summarize to find means (and counts)
 am_cell_sum <- am_spp_cells %>%
@@ -156,7 +117,7 @@ am_cell_sum <- am_spp_cells %>%
 write_csv(am_cell_sum, file.path(dir_git, 'case_study_ohi/am_spp_cell_sum.csv'))
 
 ### bind cells to regions dataframe and summarize
-am_rgn_sums <- am_cell_sum %>%
+am_rgn_sum <- am_cell_sum %>%
   inner_join(ohi_rgn_cells,
              by = 'loiczid') %>%
   # mutate(rgn_area = cell_area * proportionArea,
@@ -166,30 +127,89 @@ am_rgn_sums <- am_cell_sum %>%
          area_weighted_mean_cat = mean_cat   * cell_area_weight) %>%
   arrange(loiczid)
 
-am_rgn_sums <- am_rgn_sums %>%
+am_rgn_sum <- am_rgn_sum %>%
   group_by(rgn_id) %>%
-  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight))
+  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight),
+            mean_n_spp = mean(n_spp))
 
-am_rgn_sums <- am_rgn_sums %>%
+am_rgn_sum <- am_rgn_sum %>%
   mutate(status = 100 * ((1 - rgn_mean_cat) - 0.25) / 0.75)
 
-write_csv(am_rgn_sums, file.path(dir_git, 'case_study_ohi/am_spp_region_sums.csv'))
+write_csv(am_rgn_sum, file.path(dir_git, 'case_study_ohi/am_spp_region_sum.csv'))
+
+```
+
+``` {r calc_ohi_both_spp}
+
+### get AM spp cells for combined scores
+spp_ohi_am <- ohi_spp_info %>% 
+  filter(str_detect(spatial_source, 'am'))
+
+am_cell_sum_both <- am_spp_cells %>%
+  filter(am_sid %in% spp_ohi_am$am_sid) %>%
+  filter(!is.na(cat_score)) %>%
+  group_by(loiczid) %>%
+  summarize(mean_cat = mean(cat_score),
+            n_spp    = n(),
+            data     = 'am')
+
+### get IUCN spp cells for combined scores
+spp_ohi_iucn <- ohi_spp_info %>% 
+  filter(str_detect(spatial_source, 'iucn'))
+
+iucn_cell_sum_both <- iucn_spp_cells %>%
+  filter(iucn_sid %in% spp_ohi_iucn$iucn_sid) %>%
+  filter(!is.na(cat_score)) %>%
+  group_by(loiczid) %>%
+  summarize(mean_cat = mean(cat_score),
+            n_spp    = n(),
+            data     = 'iucn')
+
+### Stick IUCN and AM together and find spp-weighted mean category
+ohi_cell_sum <- iucn_cell_sum_both %>%
+  bind_rows(am_cell_sum_both) %>%
+  mutate(mean_weight_cat = mean_cat * n_spp) %>%
+  group_by(loiczid) %>%
+  summarize(mean_cat = sum(mean_weight_cat, na.rm = TRUE) / sum(n_spp, na.rm = TRUE),
+            n_spp = sum(n_spp, na.rm = TRUE))
+
+write_csv(ohi_cell_sum, file.path(dir_git, 'case_study_ohi/ohi_cell_sum.csv'))
+
+### bind cells to regions dataframe and summarize by region
+ohi_rgn_sum <- ohi_cell_sum %>%
+  inner_join(ohi_rgn_cells,
+             by = 'loiczid') %>%
+  # mutate(rgn_area = cell_area * proportionArea,
+  #        area_weighted_mean_cat   = weighted_mean_cat   * rgn_area,
+  #        area_weighted_mean_trend = weighted_mean_trend * rgn_area) %>%
+  mutate(cell_area_weight = cell_area * n_spp * proportionArea,
+         area_weighted_mean_cat = mean_cat   * cell_area_weight) %>%
+  arrange(loiczid)
+
+ohi_rgn_sum <- ohi_rgn_sum %>%
+  group_by(rgn_id) %>%
+  summarize(rgn_mean_cat = sum(area_weighted_mean_cat)/sum(cell_area_weight),
+            mean_n_spp = mean(n_spp))
+
+ohi_rgn_sum <- ohi_rgn_sum %>%
+  mutate(status = 100 * ((1 - rgn_mean_cat) - 0.25) / 0.75)
+
+write_csv(ohi_rgn_sum, file.path(dir_git, 'case_study_ohi/ohi_spp_region_sum.csv'))
 
 ```
 
 ``` {r create_violin_plots}
 dir_fig <- '~/github/IUCN-AquaMaps/figures'
 
-iucn_rgn_sums  <- read_csv(file.path(dir_git, 'case_study_ohi/iucn_spp_region_sums.csv'))
-am_rgn_sums    <- read_csv(file.path(dir_git, 'case_study_ohi/am_spp_region_sums.csv'))
-ohi_rgn_sums   <- read_csv(file.path('~/github/ohiprep/globalprep', 
-                                     'spp_ico/v2016/output/spp_status_global.csv'))
+iucn_rgn_sum  <- read_csv(file.path(dir_git, 'case_study_ohi/iucn_spp_region_sum.csv'))
+am_rgn_sum    <- read_csv(file.path(dir_git, 'case_study_ohi/am_spp_region_sum.csv'))
+ohi_rgn_sum   <- read_csv(file.path(dir_git, 'case_study_ohi/ohi_spp_region_sum.csv'))
 
-status_df <- ohi_rgn_sums %>%
-  select(rgn_id, ohi_st = score) %>%
-  mutate(ohi_st = 100 * ohi_st) %>%
-  full_join(am_rgn_sums %>% select(rgn_id, am_st = status), by = 'rgn_id') %>%
-  full_join(iucn_rgn_sums %>% select(rgn_id, iucn_st = status), by = 'rgn_id') %>%
+status_df <- ohi_rgn_sum %>%
+  select(rgn_id, ohi_st = status, mean_n_spp) %>%
+  mutate(ohi_st = ohi_st) %>%
+  full_join(am_rgn_sum   %>% select(rgn_id,    am_st = status), by = 'rgn_id') %>%
+  full_join(iucn_rgn_sum %>% select(rgn_id, iucn_st = status), by = 'rgn_id') %>%
   mutate(diff_am   = am_st - ohi_st ,
          diff_iucn = iucn_st - ohi_st) %>%
   gather(scenario, diff, diff_am:diff_iucn)
@@ -204,11 +224,11 @@ viol_plot <- ggplot(data = status_df, aes(x = scenario, y = diff)) +
               scale = 'width',
               draw_quantiles = c(.25, .5, .75)) +
   geom_point(position = position_jitter(w = .3), 
-             color = 'black', alpha = 1, size = 0.25) +
+             aes(color = mean_n_spp), alpha = 1, size = 0.25) +
   geom_violin(fill = NA, 
               draw_quantiles = c(.25, .5, .75),
               scale = 'width') +
-  labs(x = 'Scenario',
+  labs(x = 'Scenario, compared to OHI 2016',
        y = 'Change in SPP status') +
   scale_x_discrete(labels = c('1. AquaMaps only', 
                               '2. IUCN only'))
