--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -5,19 +5,19 @@ _About the datasets__:
 
 The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015] - essentially a refined extent of occurrence (EOO), based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of suitable habitat.  The model masks habitat to certain FAO Major Fishing Areas as a rough cut of geographic range, resulting in a "probability of occurrence" for each species.  Of the resulting maps, 1296 (5.7%) have been further refined under expert review [@kaschner_mapping_2006; @ready_predicting_2010].  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together.
 
-___short paragraph about other datasets we didn't include, i.e. SAUP?___
+___short paragraph about other datasets we didn't include, i.e. SAUP?  BOTW?___
 
 
 ___should this go in the discussion?___
 _The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006].  By comparing maps resulting from IUCN and AquaMaps methodologies, we can identify and possibly address mechanistic causes for each type of error._
 
 __Comparison of taxonomic and regional distribution__:
-To examine the overall taxonomic distribution across the spatial datasets (Fig. 1A), we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  We defined "paired map" species as those with spatial data in both datasets.
+To examine the overall taxonomic distribution across the spatial datasets (Fig. 1A), we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  
 
 To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig. SXXX)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps ___(Fig. SXXX)___.  We represented relative distribution of species count for each dataset by plotting average species count against latitude and longitude (Fig. 1B, 1C).
 
 __Comparison of paired maps__:
-Using genus and species binomials as a matching key, we selected the "paired map" species - the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  _We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population._  ___To avoid double-counting, we removed subpopulations and species aliases. Used the taxize package? which version?___  We determined species presence within each spatial cell using the same criteria outlined above.
+Using genus and species binomials as a matching key, we selected the "paired map" species - the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  _We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population._   For each of these paired map species, we determined species presence within each spatial cell for each dataset, using the same criteria outlined above.
 
 Overlaying paired distribution maps for a given species, we defined and calculated _distribution alignment_ and _area ratio_ and plotted these in Fig. 2A:
 
@@ -38,11 +38,11 @@ ___To identify data-poor species, we used the robis??? and rgbif??? packages in 
 **Methods for Ocean Health Index (OHI) case study:**
 The Species component of the OHI Biodiversity goal (SPP) uses IUCN Red List extinction risk as a proxy for a species' health.  Each species is assigned a risk score based on IUCN Red List extinction risk category, from Least Concern (0.0) to Extinct (1.0) (Data Deficient and unassessed species are excluded).  Species range is determined from its IUCN range map, where available, or its AquaMaps range map if an IUCN map is unavailable.  For each assessed OHI region, an area-weighted mean extinction risk across all species is calculated, and rescaled to calculate a status score from 0 (mean extinction risk = 0.75) to 100 (mean extinction risk = 0) [@halpern_index_2012; @halpern_patterns_2015].  
 
-_To highlight the differences in the datasets, we recalculated the OHI SPP status values using only one complete dataset at a time.  For the AquaMaps dataset, we used a presence threshold of 0% to align with the OHI 2016 assessment._  ___Fig. 3 compares these single-dataset scores to the 2016 OHI SPP status values.___
+_To highlight the differences in the datasets, we recalculated the OHI SPP status values using only one complete dataset at a time.  For the AquaMaps dataset, we used a presence threshold of 0% to align with the OHI 2016 assessment.  Note that the OHI 2016 analysis includes the Birds of the World dataset in addition to IUCN and AquaMaps; we excluded it for our analysis._ ___Fig. 3 compares these single-dataset scores to the 2016 OHI SPP status values.___
 
-_To highlight the differences in the datasets, we selected the subset of species whose ranges are represented in both datasets, eliminating species found in only one or the other dataset.  In the original OHI SPP analysis, IUCN data was used to determine ranges for these overlapping species; we calculated all regional SPP status scores for just these species as our baseline.  We then recalculated the scores using AquaMaps ranges at a 40% presence threshold (as used in the original OHI analysis) and a 0% threshold (to better simulate the "limits of distribution" defined by IUCN maps) and compared them to our IUCN baseline._
+~To highlight the differences in the datasets, we selected the subset of species whose ranges are represented in both datasets, eliminating species found in only one or the other dataset.  In the original OHI SPP analysis, IUCN data was used to determine ranges for these overlapping species; we calculated all regional SPP status scores for just these species as our baseline.  We then recalculated the scores using AquaMaps ranges at a 40% presence threshold (as used in the original OHI analysis) and a 0% threshold (to better simulate the "limits of distribution" defined by IUCN maps) and compared them to our IUCN baseline.~
 
-_We then modified the original OHI source code to recalculate the 2015 SPP status scores for all regions and all species to examine the effects of changing the AquaMaps presence threshold from 40% to 0% (all range included), and the effects of changing the data source for the overlapping species from IUCN to AquaMaps.  We calculated the differences between these results and the published SPP status scores for 2015._
+~We then modified the original OHI source code to recalculate the 2015 SPP status scores for all regions and all species to examine the effects of changing the AquaMaps presence threshold from 40% to 0% (all range included), and the effects of changing the data source for the overlapping species from IUCN to AquaMaps.  We calculated the differences between these results and the published SPP status scores for 2015.~
 
 **Methods for MPA Gap Analysis case study:** 
 To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@aquamaps_XXX].  For the primary analysis, the researchers defined species "presence" as 50% or greater probability of occurrence.  
